# ksp-solvers

./: README.md  iterative_scipy.ipynb
Trilinos/mmarket/: CMakeLists.txt  input.txt  solve_ifpack_CG.cpp  solve_muelu.cpp  test.xml
Trilinos/openmp/gen_data_solve/: CMakeLists.txt  lesson07.cpp
Trilinos/openmp/install/: build.sh
Trilinos/openmp/read_data_matrix_market/: CMakeLists.txt  input.txt  run.sh  solve_ifpack_CG.cpp
Trilinos/parallel/poission/: CMakeLists.txt  input_param.xml  tpetra_belos_ifpack2.cpp  tpetra_belos_muelu.cpp
Trilinos/serial/install/: build.sh
Trilinos/serial/read_4mdata_mtx/: CMakeCache.txt  ifpackpre.xml  solve_ifpack_CG.cpp
Trilinos/serial/read_data_4m_file/: CMakeLists.txt  CWrapper_tpetra.cpp  read.cpp  test.xml
Trilinos/serial/read_data_matrix_market/: CMakeLists.txt
Trilinos/serial/septa_diag/: tpetra_belos.cpp
Trilinos/serial/tri_dig/: CMakeLists.txt  input_param.xml  tpetra_belos.cpp  tpetra_belos_ifpack2.cpp  tpetra_belos_muelu.cpp
amgx/: FGMRES.json
misc/: CMakeLists.txt
petsc/: build.sh
petsc/amgx/: Makefile  amgx_mpi_poisson5pt_repeat.c  compile_amgx_exe.sh
petsc/parallel/possion/: compile.sh  itersolve_stndlone_pre.cpp  itersolve_stndlone_prea_reuse.cpp  itersolve_stndlone_prea_reuse1.cpp  run_exe.sh
petsc/parallel/read_data_petsc_mpi/: compile.sh  itersolve.cpp  itersolve_stndlone.cpp  itersolve_stndlone_288k.cpp  itersolve_stndlone_prea.cpp  itersolve_stndlone_prea_5m.cpp  itersolve_stndlone_prea_adv.cpp  read.cpp
petsc/parallel/sep_diag/: compile.sh  tridiag_sparse_cg_mpi.cpp
petsc/read_data_matrix_market/: compile.sh  read_MatrixMarket.cpp
petsc/read_data_petsc_serial/: compile.sh  itersolve.cpp
petsc/serial/: tridiag_sparse_cg.c
petsc/serial/read_data_matrix_market/: itersolve.cpp  mmio.cpp
petsc/serial/read_data_petsc_serial/: itersolve_stndlone.cpp  itersolve_stndlone_prea.cpp  read.cpp
petsc/serial/read_links_petsc_serial/: itersolve.cpp  read.cpp
petsc/serial/tri_diag/: compile.sh  tridiag_sparse_cg.c  tridiag_sparse_cg.cpp
